forth/test/fail/test_cond_elif_missing_pred.af
use' ../../lang.af

fun: .test_cond_elif_missing_pred_fail { -- out }
  false .then 10
  elif
  end
end
